# agentic-rag-research-pipeline

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
agents/: graph.py
app/: ingestion.py  schemas.py
