[project]
name = "agentic-rag-research-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.0.15",
    "fastapi[standard]>=0.139.2",
    "langchain-openai>=1.3.5",
    "langchain-text-splitters>=0.3.9",
    "langgraph>=1.2.9",
    "pypdf>=5.9.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.15.22",
]
